kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: openstack-messaging-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: openstack-messaging
spec:
  hosts:
  - "*"
  gateways:
  - openstack-messaging-gateway
  http:
  - route:
    - destination:
        host: rabbit-1-server
        port:
          number: 15672
